<resources>
    <string name="app_name">Activity Launcher</string>

    <string name="menu_about">About</string>
    <string name="menu_sort">Sort…</string>
    <string name="menu_sort_name">Name</string>
    <string name="menu_sort_install_time">Install time</string>
    <string name="menu_sort_update_time">Update time</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_copy_class_name">Copy class name</string>
    <string name="menu_copy_label">Copy label</string>
    <string name="menu_copy_package_name">Copy package name</string>
    <string name="menu_copy_app_name">Copy APP name</string>
    <string name="menu_copy_intent_uri">Copy intent URI</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_app_details">APP details</string>
    <string name="menu_launch_uri">Launch URI</string>
    <string name="menu_open_app">Open APP</string>

    <string name="title_app_list">Activity List</string>
    <string name="title_settings">Settings</string>
    <string name="label_getting_apps">Getting applications</string>
    <string name="label_getting_activities">Getting activities</string>
    <string name="message_about" translatable="false">Copyright (c) 2025 Jesse205</string>
    <string name="hint_search_apps">Search for app names or package names…</string>
    <string name="hint_search_activities">Search for Activity labels or names…</string>
    <string name="toast_app_not_installed">Application not installed.</string>
    <string name="tab_user_apps">User apps</string>
    <string name="tab_system_apps">System apps</string>
    <string name="label_empty_apps">No apps</string>
    <string name="label_empty_activities">No activities</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="title_launch_uri">Launch URI</string>
    <string name="error_no_activity_found">No activity found</string>
    <string name="error_file_uri_not_allowed">File URI not allowed</string>
    <string name="error_unknown">Unknown error</string>
    <string name="hint_launch_uri">Enter a URL or other URI</string>
    <string name="label_class_name">Class name</string>
    <string name="label_display_name">Display name</string>
    <string name="label_app_name">App name</string>
    <string name="label_package_name">Package name</string>
    <string name="label_intent_uri">Intent URI</string>

    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_gingerbread">Gingerbread</string>
    <string name="settings_theme_holo">Holo</string>
    <string name="settings_theme_material">Material</string>
    <string name="settings_theme_device_default">Device Default</string>
    <string name="settings_theme_settings">System Settings</string>
    <string name="settings_theme_dark_mode">Dark mode</string>
    <string name="settings_theme_dark_action_bar">Dark action bar</string>
    <string name="settings_theme_separator" translatable="false">" - "</string>

    <string-array name="settings_theme_dark_mode_entries">
        <item>Follow system</item>
        <item>Always-on</item>
        <item>Always-off</item>
    </string-array>
</resources>
