<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="?menuSearchIcon"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/menu_search"
        android:visible="false"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="?menuRefreshIcon"
        android:title="@string/menu_refresh" />
    <item
        android:icon="?menuSortIcon"
        android:showAsAction="ifRoom"
        android:title="@string/menu_sort"
        tools:ignore="UnusedAttribute">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/menu_sort_name" />
                <item
                    android:id="@+id/menu_sort_install_time"
                    android:title="@string/menu_sort_install_time" />
                <item
                    android:id="@+id/menu_sort_update_time"
                    android:title="@string/menu_sort_update_time" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_launch_uri"
        android:icon="?menuLaunchUriIcon"
        android:showAsAction="ifRoom"
        android:title="@string/menu_launch_uri"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/menu_settings"
        android:icon="?menuSettingsIcon"
        android:title="@string/menu_settings"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/menu_about"
        android:icon="?menuAboutIcon"
        android:title="@string/menu_about" />
</menu>