<?xml version="1.0" encoding="utf-8"?><!--suppress DeprecatedClassUsageInspection -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_category_appearance">
        <ListPreference
            android:key="theme"
            android:persistent="false"
            android:title="@string/settings_theme_title" />
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/settings_theme_dark_mode_entries"
            android:entryValues="@array/settings_theme_dark_mode_values"
            android:key="theme_dark_mode"
            android:persistent="true"
            android:title="@string/settings_theme_dark_mode" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="theme_dark_action_bar"
            android:persistent="true"
            android:title="@string/settings_theme_dark_action_bar" />
    </PreferenceCategory>

</PreferenceScreen>